missing background fix

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 body {
   font-size: 16px;
   font-family: "Barlow Semi Condensed";
-  background-image: url("../build/img/backgroundTest.png");
+  background-image: url("../build/img/backgroundTest2.png");
   background-repeat: no-repeat;
 }
 
@@ -31,7 +31,6 @@ h1 {
   text-align: left;
 }
 
-p,
 h2,
 h3 {
   font-weight: 800;
